--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,25 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
+    # Si vous n'avez pas encore envoyé l'image en ligne, gardez "build: ./backend"
+    # Mais il faut impérativement utiliser l'option "Repository" (Git) dans Portainer.
+    build: ./backend
     container_name: downloadix-backend
     restart: unless-stopped
-    # Le backend reste sur son port interne 5000, 
-    # il n'a pas besoin d'être exposé vers l'extérieur.
     expose:
       - "5000"
     volumes:
-      - /mnt/votre_pool/downloads:/app/downloads
+      - /mnt/data/downloads:/app/downloads
     environment:
       - FLASK_ENV=production
 
   frontend:
-    build:
-      context: ./frontend
+    build: ./frontend
     container_name: downloadix-frontend
     restart: unless-stopped
     ports:
-      - "2034:80" # L'application sera accessible sur http://IP_TRUENAS:2034
+      - "2034:80"
     depends_on:
       - backend
     environment:
-      # L'API est maintenant accessible via le même domaine/port, sous le chemin /api
       - VITE_API_URL=/api
