feat: Add initial backend dependencies and Nginx configuration for frontend serving and API proxying.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,7 +15,10 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://backend:5000/api/;
+        # Force IPv4 resolution to avoid intermittent IPv6 connection issues
+        resolver 127.0.0.11 valid=30s ipv6=off;
+        set $backend_upstream http://backend:5000;
+        proxy_pass $backend_upstream/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
